<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FF6F00"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_material"
            android:textAlignment="textStart"
            android:textColor="#F57F17"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPendant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_pendant"
            android:textAlignment="textStart"
            android:textColor="#F57F17"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbPendant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTypeP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_type_pendant"
            android:textAlignment="textStart"
            android:textColor="#F57F17"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbTypeP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_currency"
            android:textColor="#FF6F00"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_amount"
            android:textAlignment="textStart"
            android:textColor="#F57F17"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textAlignment="center"
        android:textColor="#A34C32"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        style="@android:style/Widget.Material.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E3E3E3"
            android:onClick="quote"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:text="@string/btn_quote"
            android:textColor="#323232"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E65100"
            android:onClick="reset"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:text="@string/btn_reset"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>